--- a/ReactjsServerPingWebSocket/serverpingwebsocketgui/public/index.html
+++ b/ReactjsServerPingWebSocket/serverpingwebsocketgui/public/index.html
@@ -32,7 +32,16 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <!--
+    <script src="https://cdn.jsdelivr.net/npm/sockjs-client@1/dist/sockjs.min.js"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"
+      integrity="sha512-iKDtgDyTHjAitUDdLljGhenhPwrbBfqTKWO1mkhSFH3A7blITC9MhYon6SjnMhp4o0rADGw9yAC6EW4t5a4K3g=="
+      crossorigin="anonymous"
+    ></script>
+      -->
+
+    <title>Market data service App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
